Changes up to adding data to package

--- a/vignettes/alignment.Rmd
+++ b/vignettes/alignment.Rmd
@@ -3,10 +3,11 @@ title: "alignment_tutorial"
 author: "Nelson Johansen, Gerald Quon"
 date: "`r Sys.Date()`"
 output: pdf_document
+package: scAlign
 vignette: >
   %\VignetteIndexEntry{alignment_tutorial}
   %\VignetteEngine{knitr::rmarkdown}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
@@ -22,6 +23,33 @@ The following is a walkthrough of a typical alignment problem for scAlign and ha
 
 1. Learning a low-dimensional cell state space in which cells group by function and type, regardless of condition (age).
 2. Accurately labeling old cells with cell cycle and cell type information using only the young cell annotations.
+
+## Installation
+
+Guide to installing python and tensorflow on different operating systems.
+
+On Windows:
+Download Python 3.6.8. Note, newer versions of Python (e.g. 3.7) cannot use TensorFlow at this time.
+Make sure pip is included in the installation.
+Open Windows Command Prompt, or PowerShell.
+Navigate to your Python installation directory (for Windows 10, the default seems to be C:\Users\userid\AppData\Local\Programs\Python\Python36\Scripts, where userid is your own username).
+Run .\pip install --upgrade tensorflow
+
+On Ubuntu:
+sudo apt update
+sudo apt install python3-dev python3-pip
+pip3 install --user --upgrade tensorflow # install in $HOME
+python3 -c "import tensorflow as tf; tf.enable_eager_execution(); print(tf.reduce_sum(tf.random_normal([1000, 1000])))"
+
+On MacOS (homebrew):
+/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+export PATH="/usr/local/bin:/usr/local/sbin:$PATH"
+brew update
+brew install python # Python 3
+pip3 install --user --upgrade tensorflow # install in $HOME
+python3 -c "import tensorflow as tf; tf.enable_eager_execution(); print(tf.reduce_sum(tf.random_normal([1000, 1000])))"
+
+Further details at: https://www.tensorflow.org/install
 
 ## Data setup
 The gene count matrices used for this tutorial are hosted [here](https://github.com/quon-titative-biology/data/blob/master/kowalcyzk_gene_counts.rda).
@@ -42,76 +70,47 @@ load(file.path(working.dir, 'kowalcyzk_gene_counts.rda'))
 
 ## Extract age and cell type labels
 cell_age = unlist(lapply(strsplit(colnames(C57BL6_mouse_data), "_"), "[[", 1))
-cell_type = gsub('HSC', '',
-                 unlist(
-                 lapply(strsplit(colnames(C57BL6_mouse_data), "_"), "[[", 2)
-                 ))
+cell_type = gsub('HSC', '', unlist(lapply(strsplit(colnames(C57BL6_mouse_data), "_"), "[[", 2)))
 
 ## Separate young and old data
-row_id = unique(row.names(C57BL6_mouse_data))
-young_data = C57BL6_mouse_data[row_id, which(cell_age == "young")]
-old_data   = C57BL6_mouse_data[row_id, which(cell_age == "old")]
+young_data = C57BL6_mouse_data[unique(row.names(C57BL6_mouse_data)),which(cell_age == "young")]
+old_data   = C57BL6_mouse_data[unique(row.names(C57BL6_mouse_data)),which(cell_age == "old")]
 
 ## Set up young mouse Seurat object
-youngMouseSeuratObj <- CreateSeuratObject(raw.data = young_data,
-                                          project = "MOUSE_AGE",
-                                          min.cells = 0)
-youngMouseSeuratObj@meta.data$stim  <- "YOUNG"
-youngMouseSeuratObj@meta.data$label <- cell_type[which(cell_age == "young")]
-youngMouseSeuratObj <- FilterCells(youngMouseSeuratObj,
-                                   subset.names = "nGene",
-                                   low.thresholds = 100,
-                                   high.thresholds = Inf)
+youngMouseSeuratObj <- CreateSeuratObject(raw.data = young_data, project = "MOUSE_AGE", min.cells = 0)
+youngMouseSeuratObj <- FilterCells(youngMouseSeuratObj, subset.names = "nGene", low.thresholds = 100, high.thresholds = Inf)
 youngMouseSeuratObj <- NormalizeData(youngMouseSeuratObj)
-youngMouseSeuratObj <- ScaleData(youngMouseSeuratObj,
-                                 do.scale=T,
-                                 do.center=T,
-                                 display.progress = T)
+youngMouseSeuratObj <- ScaleData(youngMouseSeuratObj, do.scale=T, do.center=T, display.progress = T)
 
 ## Set up old mouse Seurat object
-oldMouseSeuratObj <- CreateSeuratObject(raw.data = old_data,
-                                        project = "MOUSE_AGE",
-                                        min.cells = 0)
-oldMouseSeuratObj@meta.data$stim <- "OLD"
-oldMouseSeuratObj@meta.data$label <- cell_type[which(cell_age == "old")]
-oldMouseSeuratObj <- FilterCells(oldMouseSeuratObj,
-                                 subset.names = "nGene",
-                                 low.thresholds = 100,
-                                 high.thresholds = Inf)
+oldMouseSeuratObj <- CreateSeuratObject(raw.data = old_data, project = "MOUSE_AGE", min.cells = 0)
+oldMouseSeuratObj <- FilterCells(oldMouseSeuratObj, subset.names = "nGene", low.thresholds = 100, high.thresholds = Inf)
 oldMouseSeuratObj <- NormalizeData(oldMouseSeuratObj)
-oldMouseSeuratObj <- ScaleData(oldMouseSeuratObj,
-                               do.scale=T,
-                               do.center=T,
-                               display.progress = T)
-
-## Gene selection
-youngMouseSeuratObj <- FindVariableGenes(youngMouseSeuratObj, do.plot = F)
-oldMouseSeuratObj <- FindVariableGenes(oldMouseSeuratObj, do.plot = F)
-g.1 <- head(rownames(youngMouseSeuratObj@hvg.info), 3000)
-g.2 <- head(rownames(oldMouseSeuratObj@hvg.info), 3000)
-genes.use <- unique(c(g.1, g.2))
-genes.use <- intersect(genes.use, rownames(youngMouseSeuratObj@scale.data))
-genes.use <- intersect(genes.use, rownames(oldMouseSeuratObj@scale.data))
+oldMouseSeuratObj <- ScaleData(oldMouseSeuratObj, do.scale=T, do.center=T, display.progress = T)
 ```
 
 ## scAlign setup
 The general design of scAlign's makes it agnostic to the input RNA-seq data representation. Thus, the input data can either be
 gene-level counts, transformations of those gene level counts or a preliminary step of dimensionality reduction such
-as cannocial correlates or principal component scores. Here we create the scAlign object from the previously definied Seurat objects and perform both PCA and CCA on the unaligned data.
+as canonical correlates or principal component scores. Here we create the scAlign object from the previously defined
+Seurat objects and perform both PCA and CCA on the unaligned data.
 
 ```R
 ## Create SCE objects to pass into scAlignCreateObject
 youngMouseSCE <- SingleCellExperiment(
-    assays = list(counts = youngMouseSeuratObj@raw.data[genes.use,], scale.data = youngMouseSeuratObj@scale.data[genes.use,])
+    assays = list(counts = t(FetchData(youngMouseSeuratObj, vars.all=rownames(young_data), use.raw=TRUE)),
+                  scale.data = t(FetchData(youngMouseSeuratObj, vars.all=rownames(young_data), use.scaled=TRUE)))
 )
 
 oldMouseSCE <- SingleCellExperiment(
-    assays = list(counts = oldMouseSeuratObj@raw.data[genes.use,], scale.data = oldMouseSeuratObj@scale.data[genes.use,])
+    assays = list(counts = t(FetchData(oldMouseSeuratObj, vars.all=rownames(old_data), use.raw=TRUE)),
+                  scale.data = t(FetchData(oldMouseSeuratObj, vars.all=rownames(old_data), use.scaled=TRUE)))
 )
 
 ## Build the scAlign class object and compute PCs
 scAlignHSC = scAlignCreateObject(sce.objects = list("YOUNG"=youngMouseSCE, "OLD"=oldMouseSCE),
-                                 labels = list(youngMouseSeuratObj@meta.data$label, oldMouseSeuratObj@meta.data$label),
+                                 labels = list(cell_type[which(cell_age == "young")], cell_type[which(cell_age == "old")]),
+                                 data.use="scale.data",
                                  pca.reduce = TRUE,
                                  pcs.compute = 50,
                                  cca.reduce = TRUE,
@@ -124,35 +123,35 @@ Now we align the young and old cpopulations. scAlign returns a low-dimensional j
 removed allowing us to use the complete dataset for downstream analyses such as clustering or differential expression.
 
 ```R
-## Run scAlign with high_var_genes
+## Run scAlign with all_genes
 scAlignHSC = scAlign(scAlignHSC,
-                     options=scAlignOptions(steps=5000, norm=TRUE, log.every=3000, early.stop=TRUE),
-                     encoder.data="scale.data",
-                     supervised='none',
-                     run.encoder=TRUE,
-                     run.decoder=FALSE,
-                     log.dir=file.path(results.dir, 'models','gene_input'),
-                     device="CPU")
+                    options=scAlignOptions(steps=5000, log.every=1000, norm=TRUE, early.stop=TRUE),
+                    encoder.data="scale.data",
+                    supervised='none',
+                    run.encoder=TRUE,
+                    run.decoder=TRUE,
+                    log.dir=file.path(results.dir, 'models','gene_input'),
+                    device="CPU")
 
 ## Additional run of scAlign with PCA
 scAlignHSC = scAlign(scAlignHSC,
-                     options=scAlignOptions(steps=15000, norm=TRUE, log.every=3000, early.stop=FALSE),
-                     encoder.data="PCA",
-                     supervised='none',
-                     run.encoder=TRUE,
-                     run.decoder=FALSE,
-                     log.dir=file.path(results.dir, 'models','pca_input'),
-                     device="CPU")
+                    options=scAlignOptions(steps=15000, log.every=1000, norm=TRUE, early.stop=FALSE),
+                    encoder.data="PCA",
+                    supervised='none',
+                    run.encoder=TRUE,
+                    run.decoder=FALSE,
+                    log.dir=file.path(results.dir, 'models','pca_input'),
+                    device="CPU")
 
 ## Additional run of scAlign with CCA
 scAlignHSC = scAlign(scAlignHSC,
-                     options=scAlignOptions(steps=5000, norm=TRUE, log.every=3000, early.stop=TRUE),
-                     encoder.data="CCA",
-                     supervised='none',
-                     run.encoder=TRUE,
-                     run.decoder=FALSE,
-                     log.dir=file.path(results.dir, 'models','cca_input'),
-                     device="CPU")
+                    options=scAlignOptions(steps=5000, log.every=1000, norm=TRUE, early.stop=TRUE),
+                    encoder.data="CCA",
+                    supervised='none',
+                    run.encoder=TRUE,
+                    run.decoder=FALSE,
+                    log.dir=file.path(results.dir, 'models','cca_input'),
+                    device="CPU")
 
 ## Plot aligned data in tSNE space, when the data was processed in three different ways:
 ##   1) either using the original gene inputs,
@@ -166,7 +165,10 @@ pca_plot = PlotTSNE(scAlignHSC, "ALIGNED-PCA", title="scAlign-PCA", perplexity=3
 cca_plot = PlotTSNE(scAlignHSC, "ALIGNED-CCA", title="scAlign-CCA", perplexity=30)
 legend = get_legend(PlotTSNE(scAlignHSC, "ALIGNED-GENE", title="scAlign-Gene", legend="right", max_iter=1))
 
-ggsave(grid.arrange(gene_plot, pca_plot, cca_plot, legend, nrow = 1, layout_matrix=cbind(1,1,1,2,2,2,3,3,3,4)),
+multi_plot_labels = grid.arrange(gene_plot, pca_plot, cca_plot,
+                                 legend,
+                                 nrow = 1,
+                                 layout_matrix=cbind(1,1,1,2,2,2,3,3,3,4)),
       file=file.path('~/combined_plot_alignment_colorby_label.png'), height=12, width=36)
 
 ## Plot alignment for 3 input types
@@ -176,17 +178,14 @@ pca_plot = PlotTSNE(scAlignHSC, "ALIGNED-PCA", title="scAlign-PCA", cols=c("red"
 cca_plot = PlotTSNE(scAlignHSC, "ALIGNED-CCA", title="scAlign-CCA", cols=c("red","blue"), labels.use="group.by", perplexity=30)
 legend = get_legend(PlotTSNE(scAlignHSC, "ALIGNED-GENE", title="scAlign-Gene", cols=c("red","blue"), labels.use="group.by", legend="right", max_iter=1))
 
-ggsave(grid.arrange(gene_plot, pca_plot, cca_plot, legend, nrow = 1, layout_matrix=cbind(1,1,1,2,2,2,3,3,3,4)),
-     file=file.path("~/combined_plot_alignment_colorby_dataset.png"), height=12, width=36)
+multi_plot_dataset = grid.arrange(gene_plot, pca_plot, cca_plot,
+                                  legend,
+                                  nrow = 1,
+                                  layout_matrix=cbind(1,1,1,2,2,2,3,3,3,4)),
+      file=file.path('~/combined_plot_alignment_colorby_dataset.png'), height=12, width=36)
 ```
 
-We now visualize the alignment of Kowalcyzk et al. for each data type:
-<p>
-![Test](./combined_plot_alignment_stim.png)
-</p>
-
-Labeling the aligned cells reveals that scAlign learns a joint embedding space which preserves cell type information:
-
-<p>
-![Test](./combined_plot_alignment_label.png)
-</p>
+# Session Info
+```{r}
+sessionInfo()
+```
